gridlayout with bootstrap

--- a/style.css
+++ b/style.css
@@ -113,6 +113,12 @@ text-align: center;
     grid-column: 1/3;
 }
 
+.col{ /* margin:0;
+  border:1px solid gray; */
+}
+.row{
+ /* margin:2px 0 0 0; }*/
+
 @keyframes example1 {
   0% {
     left: 0px;
